# gr-audioproc

./: CMakeLists.txt  MANIFEST.md  README.md
cmake/Modules/: audioprocConfig.cmake
docs/: README.audioproc
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: audio_speed.grc  freq_shift.grc  freq_shift_mic.grc  vocode.grc
grc/: #audioproc_vocode.xml#  CMakeLists.txt  audioproc_compress.xml  audioproc_vocode.xml  audioproc_vocode.xml~
include/audioproc/: CMakeLists.txt  api.h
lib/: CMakeLists.txt  qa_audioproc.cc  qa_audioproc.h  test_audioproc.cc
python/: #vocode.py#  .#vocode.py  CMakeLists.txt  __init__.py  compress.py  vocode.py~
swig/: CMakeLists.txt  audioproc_swig.i
